fixed mobile and aligned all content to center

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
 
 .flexbox-container-1 {
 	display: flex;
+	margin: auto;
 	flex-wrap: wrap;
 	max-width: 1800px;
 	max-height: none;
